Changelog
=========

1.13 (unreleased)
-----------------

- Hide annexes field when there is no annex.
  [sgeulette]

1.12 (2018-12-04)
-----------------

- Fixed tests now that the create() testing helper method
  does not accept 'meetingConfig' paramter anymore.
  [gbastien]


1.11 (2017-10-13)
-----------------

- Display preferred meeting date in the item infos viewlet.
  [sdelcourt]


1.10 (2017-10-10)
-----------------

- Rename IPreferredMeetings interface.
  [sdelcourt]


1.9 (2017-10-10)
----------------

- Add preferred meeting selection in the send form.
  [sdelcourt]


1.8 (2017-08-22)
----------------

- Add translation for annex selection field.
  [sdelcourt]


1.7 (2017-08-18)
----------------

- Add annex selection in the send form.
  [sdelcourt]


1.6 (2017-05-24)
----------------

- Adapted regarding changes in imio.pm.ws for Products.PloneMeeting 4.0.
 [gbastien]


1.5 (2016-11-04)
----------------

- Try to make a correct release.
  [sdelcourt]


1.4 (2016-11-04)
----------------

- Add zope events WillbeSendToPMEvent and SentToPMEvent.
 [sdelcourt]


1.3 (2016-08-03)
----------------

- Display `extraAttrs` correctly in the preview form

1.2 (2016-05-13)
----------------
- Adapted code to work with Products.PloneMeeting 4.0

1.1 (2015-02-27)
----------------
- Adapted code to work with Products.PloneMeeting 3.3

1.0 (2015-02-27)
----------------
- Use with Products.PloneMeeting 3.2
- Initial release