@@ -132,4 +132,12 @@
         directory="javascripts"
     />
 
+    <genericsetup:upgradeDepends
+        source="*"
+        destination="1.13"
+        title="Upgrade to 1.13"
+        profile="imio.pm.wsclient:default"
+        import_steps="plone.app.registry"
+        />
+
 </configure>
