@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
- <version>1.2dev</version>
+ <version>1.13</version>
  <dependencies>
   <dependency>profile-plone.app.registry:default</dependency>
   <dependency>profile-collective.z3cform.datagridfield:default</dependency>
